# Dodgin-Boxes

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Dependencies/IncludeDependencies/VulkanLayer/: Buffer.h  Command.h  CommandPool.h  Device.h  MemoryManager.h  Pipeline.h  RenderPass.h  Resource.h  Shader.h  SwapChain.h  Texture.h
DodgingBoxes/: Character.cpp  Character.h  Collider.cpp  Collider.h  DeathScreen.cpp  DeathScreen.h  DodgingBoxes.cpp  DodgingBoxes.sln  DodgingBoxes.vcxproj  DodgingBoxes.vcxproj.filters  Enemy.cpp  Enemy.h  EnemyManager.cpp  EnemyManager.h  Floor.cpp  Floor.h  Font.cpp  Font.h  GameManager.cpp  GameManager.h  GameObject.h  PauseScreen.cpp  PauseScreen.h  Player.cpp  Player.h  SoundManager.cpp  SoundManager.h  Text.cpp  Text.h  Utilities.cpp  Utilities.h  compile_shaders.bat  frag_blue.frag  frag_red.frag  frag_yellow.frag  vert_standard.vert
DodgingBoxes/Renderer/: Renderer.cpp  Renderer.h
DodgingBoxes/Resources/: ARIAL.fnt  Default.bfxrsound  compile_shaders.bat  death.bfxrsound  enemy_sound.bfxrsound  frag_blue.frag  frag_darken.frag  frag_green.frag  frag_red.frag  frag_red_reflect.frag  frag_text.frag  frag_volume.frag  frag_yellow.frag  frag_yellow_reflect.frag  menu_sound.bfxrsound  pause_sound.bfxrsound  save_data.b  vert_box_internals.vert  vert_darken.vert  vert_menu_screen.vert  vert_reflect_map.vert  vert_shadow_map.vert  vert_standard.vert  vert_standard_light_index.vert  vert_standard_tex_coord.vert
app/: CMakeLists.txt  DodgingBoxes.cpp
include/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
src/: CMakeLists.txt  Enemy.cpp  EnemyManager.cpp  GameManager.cpp  GameObject.h  Player.cpp  Player.h  SoundManager.cpp  SoundManager.h  Text.cpp  Utilities.cpp  Utilities.h
src/Resources/: compile_shaders.bat  compile_shaders.sh  frag_blue.frag  frag_box_internals.frag  frag_death_screen.frag  frag_pause_screen.frag  frag_yellow_reflect.frag  pause_sound  save_data.b  vert_standard.vert  vert_standard_light_index.vert  vert_text.vert
